# token-bss

./: .gitignore  Cargo.toml  README.md  input  out.csv  output.csv
.github/workflows/: ci.yml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: balance_setter.rs  main.rs  utils.rs
crates/server/: .env.sample  Cargo.toml  README.md
crates/server/src/: config.rs  handlers.rs  main.rs  server.rs  state.rs  utils.rs
crates/token-bss/: Cargo.toml
crates/token-bss/src/: lib.rs  utils.rs
crates/token-bss/src/ops/: mod.rs  token.rs
examples/: Cargo.toml  eth_token_support.rs
scripts/: setup.sh  tokenlist_slots.sh
src/: cmd.rs  common.rs  config.rs  lib.rs  main.rs  slot_finder.rs  utils.rs
src/slot_finder/: lang.rs  mod.rs  slot_finder.rs  trace_parser.rs  utils.rs
src/slot_finder/ops/: mod.rs  storage.rs  token.rs  trace.rs
tests/: eth_token_support.rs
