[package]
name = "erc20-topup"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.17", features = ["derive"] }
dotenv = "0.15.0"
alloy = { git = "https://github.com/alloy-rs/alloy", rev = "e7542d7", features = [
    "contract",
    "network",
    "providers",
    "provider-http",
    "rpc-client",
    "rpc-types-eth",
    "rpc-types-trace",
    "signers",
    "signer-wallet",
    "consensus",
    "eips",
    "serde",
    "node-bindings",
] }
eyre = "0.6.12"
futures = "0.3.28"
hex = { version = "*", features = ["serde"] }
rand = "0.8.5"
serde_json = "1.0.108"
tokio = { version = "1.32.0", features = ["full"] }
reqwest = "0.12.4"
const-hex = "1.11.3"

[dev-dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
serde = "1.0.188"
tokio = { version = "1.32.0", features = ["full"] }
