[workspace]
members = [
    "crates/*",
    "examples/",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.76"
license = "GPL-3.0"
exclude = [ "examples/" ]

[workspace.dependencies]
token-bss = { path = "crates/token-bss" }

alloy = { git = "https://github.com/alloy-rs/alloy", rev = "4316c68", features = [
    "network",
    "providers",
    "provider-http",
    "rpc-client",
    "rpc-types-eth",
    "rpc-types-trace",
    "node-bindings",
] }
eyre = "0.6.12"
tokio = { version = "1.32.0", features = ["full"] }
dotenv = "0.15.0"